--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/portfolio.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="My personal portfolio."/>
+    <meta name="description" content="Personal portfolio."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/portfolio.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
